# chatOllama

./: .env  README.md  app.py  ollamaChatDemo.mov  pyproject.toml
static/src/css/: input.css
templates/: index.html
