[tool.poetry]
name = "flaskgpt"
version = "0.1.0"
description = "ChatGPT clone usung Flask"
authors = ["Aissam-salman <nasawi.lmj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
openai = "^1.25.2"
python-dotenv = "^1.0.1"
ollama = "^0.1.9"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
